# Join-Language

./: Join-Language.cabal  Join.hs  README.md  stack.yaml
Join/: Apply.hs  Channel.hs  ChannelF.hs  Examples.hs  Language.hs  Message.hs  Pattern.hs  Response.hs  Types.hs
Join/Data/: Barrier.hs  Barrier.hs~  Buffer.hs  Buffer.hs~  Count.hs  Counter.hs  Counter.hs~  JVar.hs  Lock.hs  Lock.hs~  Loop.hs  Pair.hs  Timeout.hs
Join/Examples/: DiningPhilosophers.hs
Join/Interpretation/: Basic.hs  Complex.hs  Describe.hs  Simple.hs
Join/Interpretation/Basic/: Debug.hs  DynamicMessageBox.hs  MessageBox.hs  Rule.hs  Status.hs  StoredDefinitions.hs  TypedMessageBox.hs
Join/Interpretation/Complex/: Rule.hs  Status.hs
Join/Interpretation/Simple/: Types.hs
Join/Interpreter/: Basic.hs  Describe.hs  Interface.hs
Join/Interpreter/Basic/: Debug.hs  DynamicMessageBox.hs  MessageBox.hs  Rule.hs  Status.hs  StoredDefinitions.hs
Join/Language/: Channel.hs  Distributed.hs  Examples.hs  SyncChannel.hs  Types.hs
Join/Language/Interpretation/: Describe.hs
Join/Language/Types/: Channel.hs  SyncChannel.hs  SyncVal.hs
Join/Pattern/: Builder.hs  Channel.hs  Clause.hs  Clauses.hs  Eq.hs  Eq.hs~  Pass.hs  Patterns.hs  Pred.hs  Rep.hs
Join/Pattern/Builder/: Nat.hs  Natural.hs  Vector.hs
Join/Pattern/Rep/: Definition.hs  List.hs  Pattern.hs  Simple.hs
Join/Types/: Apply.hs  Channel.hs  Message.hs  Pattern.hs  Response.hs  SyncVal.hs
Join/Types/Pattern/: Builder.hs  Channel.hs  Clause.hs  Clauses.hs  Eq.hs  Patterns.hs  Pred.hs  Rep.hs
Join/Types/Pattern/Builder/: Nat.hs  Natural.hs  Vector.hs
Join/Types/Pattern/Rep/: Definition.hs  List.hs  Pattern.hs  Simple.hs
doc/: Join-Interpretation-Describe.html  Join-Interpretation-Simple-Types.html  Join-Interpretation-Simple.html  Join-Language-Examples.html  Join-Language-Types-Channel.html  Join-Language-Types-SyncVal.html  Join-Language-Types.html  Join-Language.html  doc-index.html  index-frames.html  index.html  mini_Join-Interpretation-Describe.html  mini_Join-Interpretation-Simple-Types.html  mini_Join-Interpretation-Simple.html  mini_Join-Language-Examples.html  mini_Join-Language-Types-Channel.html  mini_Join-Language-Types-SyncVal.html  mini_Join-Language-Types.html  mini_Join-Language.html
