name:                Join-Language
version:             0.4.7.0
synopsis:            Haskell Join Calculus DSL
description:         An attempt at encoding the Join Calculus within the Haskell
                     programming language as an Embedded DSL.
license-file:        LICENSE
author:              Samuel A. Yallop
maintainer:          syallop@gmail.com
category:            Join
build-type:          Simple
cabal-version:       >=1.10


library
  -- Modules exported by the library.
  exposed-modules:    Join
                    , Join.Language
                    , Join.Language.Distributed
                    , Join.Apply
                    , Join.Channel
                    , Join.Message

                    , Join.Pattern.Builder
                    , Join.Pattern
                    , Join.Pattern.Pass
                    , Join.Pattern.Rep
                    , Join.Pattern.Rep.Definition
                    , Join.Pattern.Rep.Pattern
                    , Join.Pattern.Rep.Simple
                    , Join.Response

                    , Join.Examples
                    , Join.Examples.DiningPhilosophers

                    , Join.Data.Barrier
                    , Join.Data.Buffer
                    , Join.Data.Count
                    , Join.Data.Counter
                    , Join.Data.JVar
                    , Join.Data.Lock

  -- Modules included in this library but not exported.
  other-modules:      Join.Pattern.Channel
                    , Join.Pattern.Rep.List

  -- LANGUAGE extensions used by modules in this package.
  other-extensions:   DataKinds
                    , MultiWayIf
                    , ConstraintKinds
                    , FlexibleContexts
                    , FlexibleInstances
                    , GADTs
                    , MultiParamTypeClasses
                    , RankNTypes
                    , TemplateHaskell
                    , TypeOperators
                    , TypeSynonymInstances
                    , GeneralizedNewtypeDeriving
                    , ImpredicativeTypes
                    , OverloadedStrings
                    , IncoherentInstances
                    , EmptyDataDecls
                    , ExistentialQuantification
                    , FunctionalDependencies
                    , ScopedTypeVariables
                    , UndecidableInstances

  -- Other library packages from which modules are imported.
  build-depends:      base
                    , DSL-Compose
                    , NonZero
                    , transformers
                    , cereal
                    , containers
                    , bytestring
                    , vector
                    , random
                    , bimap
                    , template-haskell

  -- Base language which the package is written in.
  default-language:  Haskell2010

